--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fff7ed;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .wrapper {
@@ -57,6 +57,22 @@ header a:hover {
   text-decoration: underline;
 }
 
+main {
+  margin-bottom: 84px;
+}
+
+footer {
+  background-color: #161616;
+  color: #aaaaaa;
+  height: 74px;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  font-weight: 500;
+}
+
 .link-button {
   display: inline-block;
   text-align: center;
@@ -77,7 +93,7 @@ header a:hover {
 /*** HOME PAGE ***/
 .home-container {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)),
-    url('./assets/images/home-hero.png') no-repeat center center;
+    url("./assets/images/home-hero.png") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -236,7 +252,7 @@ header a:hover {
   color: #4d4d4d;
 }
 
-i[class*='van-type-'] {
+i[class*="van-type-"] {
   padding: 7px 14px;
 }
 
@@ -290,4 +306,21 @@ i[class*='van-type-'] {
   background-color: #ff8c38;
   color: white;
   font-size: 1.125rem;
+}
+
+.host-nav {
+  display: flex;
+}
+
+.host-nav a {
+  text-decoration: none;
+  color: #4d4d4d;
+  font-weight: 500;
+  padding: 5px 20px;
+}
+
+.host-nav a:hover {
+  color: #161616;
+  text-decoration: underline;
+  font-weight: 600;
 }
