--- a/index.css
+++ b/index.css
@@ -10,15 +10,9 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-.wrapper {
-  width: 90%;
-  max-width: 900px;
-  margin: 0 auto;
-}
-
-.home-wrapper {
-  max-width: 500px;
-  margin: 0 auto;
+a {
+  text-decoration: unset;
+  color: unset;
 }
 
 body::-webkit-scrollbar {
@@ -193,6 +187,15 @@ footer {
 /*** VAN PAGES ***/
 .van-list-container {
   padding-inline: 23px;
+}
+
+.van-list-filter-buttons {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.van-list-filter-buttons > a {
+  margin-right: 15px;
 }
 
 .van-list {
